--- a/src/components/ControlPanel/TimeSlider/style.css
+++ b/src/components/ControlPanel/TimeSlider/style.css
@@ -7,8 +7,12 @@
   display: none !important;
 } */
 
-.esri-time-slider__layout--compact .esri-time-slider__row:nth-child(1), 
-.esri-time-slider__layout--compact .esri-time-slider__row:nth-child(3) {
+.time-slider-container.esri-time-slider__layout--compact .esri-time-slider__row:nth-child(1), 
+.time-slider-container.esri-time-slider__layout--compact .esri-time-slider__row:nth-child(3) {
     display: none !important;
     height: 0;
+}
+
+.time-slider-container.esri-widget {
+  background-color: transparent;
 }
