--- a/src/components/ControlPanel/TimeSlider/style.css
+++ b/src/components/ControlPanel/TimeSlider/style.css
@@ -1,18 +1,41 @@
-/* .esri-time-slider__time-extent,
+/* hide elements that not need */
+.esri-time-slider__time-extent,
 .esri-time-slider__min,
 .esri-time-slider__max,
 .esri-time-slider__previous,
 .esri-time-slider__animation,
 .esri-time-slider__next {
   display: none !important;
-} */
-
+}
 .time-slider-container.esri-time-slider__layout--compact .esri-time-slider__row:nth-child(1), 
 .time-slider-container.esri-time-slider__layout--compact .esri-time-slider__row:nth-child(3) {
     display: none !important;
     height: 0;
 }
 
+/* set widget background to transparent*/
 .time-slider-container.esri-widget {
   background-color: transparent;
+}
+
+.time-slider-container .esri-time-slider__slider  {
+  background: transparent;
+}
+
+.time-slider-container .esri-time-slider__slider .esri-slider {
+  background: transparent;
+}
+
+/* use theme color */
+.time-slider-container .esri-slider__ticks {
+  @apply text-custom-light-blue;
+}
+
+.esri-time-slider__mode--time-window .esri-slider__segment-1 {
+  @apply bg-custom-light-blue;
+}
+
+.esri-slider__thumb {
+  @apply border-2 border-custom-light-blue bg-custom-light-blue;
+  filter: drop-shadow(2px 2px 6px black)
 }
