--- a/src/components/ControlPanel/TimeSlider/style.css
+++ b/src/components/ControlPanel/TimeSlider/style.css
@@ -36,6 +36,10 @@
   @apply bg-custom-light-blue;
 }
 
+.esri-time-slider__mode--time-window .esri-slider__segment-2 {
+  @apply bg-custom-background;
+}
+
 #timeSliderDiv .esri-slider__thumb {
   @apply border-2 border-custom-light-blue bg-custom-light-blue;
   filter: drop-shadow(2px 2px 6px black)
