feat: Action Bar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,6 +16,7 @@ body {
 .theme-background::before {
     content: ' ';
     position: absolute;
+    pointer-events: none;
     top: 0;
     left: 0;
     width: 100%;
