fix: The left portion of unselected range in the time slider still has the default styling

--- a/src/components/ControlPanel/TimeSlider/style.css
+++ b/src/components/ControlPanel/TimeSlider/style.css
@@ -43,7 +43,8 @@
   @apply bg-custom-light-blue;
 }
 
-.esri-time-slider__mode--time-window .esri-slider__segment-2 {
+.esri-time-slider__mode--time-window .esri-slider__segment-2,
+.esri-time-slider__mode--time-window .esri-slider__segment-0 {
   background-color: #00232f;
   border: 1px solid #193d49;
 }
