--- a/src/components/ControlPanel/TimeSlider/style.css
+++ b/src/components/ControlPanel/TimeSlider/style.css
@@ -44,7 +44,9 @@
 }
 
 .esri-time-slider__mode--time-window .esri-slider__segment-2,
-.esri-time-slider__mode--time-window .esri-slider__segment-0 {
+.esri-time-slider__mode--time-window .esri-slider__segment-0,
+.esri-time-slider__mode--instant .esri-slider__segment-0,
+.esri-time-slider__mode--instant .esri-slider__segment-1 {
   background-color: #00232f;
   border: 1px solid #193d49;
 }
