feat: disable control panel when animation mode is on

--- a/src/components/ControlPanel/ControlPanel.css
+++ b/src/components/ControlPanel/ControlPanel.css
@@ -14,3 +14,7 @@
     background: linear-gradient(180deg, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0) 100%);
     z-index: 0;
 }
+
+.disabled-when-animation-mode-is-on {
+    @apply pointer-events-none opacity-40;
+}
