feat: hide map components when animation mode is on

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,3 +28,7 @@ body {
 .esri-menu {
     @apply bg-custom-background text-custom-light-blue;
 }
+
+.hide-map-control .esri-zoom {
+    display: none;
+}
