--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,4 @@
+@import 'https://js.arcgis.com/4.28/@arcgis/core/assets/esri/themes/dark/main.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
